# cdcx-cli

./: .gitignore  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  install-local.sh  install.sh
.agents/plugins/: marketplace.json
.claude-plugin/: README.md
.cursor-plugin/: marketplace.json
.github/workflows/: auto-release.yml  ci.yml  pages.yml  release.yml
agents/: AGENTS.md  error-catalog.json  tool-catalog.json
crates/cdcx-cli/: Cargo.toml
crates/cdcx-cli/src/: cli_builder.rs  dispatch.rs  global.rs  main.rs
crates/cdcx-cli/src/groups/: mod.rs  paper.rs  schema.rs  setup.rs  stream.rs
crates/cdcx-cli/src/mcp/: gating.rs  mod.rs  server.rs  tools.rs
crates/cdcx-cli/tests/: cli_smoke.rs
crates/cdcx-core/: Cargo.toml
crates/cdcx-core/src/: api_client.rs  auth.rs  config.rs  env.rs  error.rs  github.rs  lib.rs  origin.rs  output.rs  safety.rs  sanitize.rs  schema.rs  signing.rs  tables.rs  update.rs  ws_client.rs
crates/cdcx-core/src/openapi/: fetcher.rs  mod.rs  parser.rs  table_hints.rs  types.rs
crates/cdcx-core/src/paper/: engine.rs  types.rs
crates/cdcx-core/src/price_api/: client.rs  directory.rs  mod.rs  models.rs
crates/cdcx-core/tests/: api_reference_test.rs  openapi_integration.rs  test_openapi_navigate.rs
crates/cdcx-tui/: Cargo.toml
crates/cdcx-tui/src/: app.rs  config.rs  event.rs  format.rs  lib.rs  loading.rs  setup.rs  state.rs  streaming.rs  theme.rs
crates/cdcx-tui/src/tabs/: history.rs  market.rs  mod.rs  orders.rs  portfolio.rs  positions.rs  watchlist.rs
crates/cdcx-tui/src/widgets/: candlestick.rs  detail_view.rs  discover.rs  instrument_picker.rs  mod.rs  research_pane.rs  settings.rs  spotlight.rs  status_bar.rs  ticker_tape.rs
crates/cdcx-tui/src/workflows/: cancel_order.rs  close_position.rs  mod.rs  oco_order.rs  otoco_order.rs  paper_order.rs  place_order.rs
hooks/: install.sh  pre-commit  pre-push
plugins/cdcx-cli/: .mcp.json  gemini-extension.json
plugins/cdcx-cli/.claude-plugin/: plugin.json
plugins/cdcx-cli/.codex-plugin/: plugin.json
plugins/cdcx-cli/.cursor-plugin/: plugin.json
plugins/cdcx-cli/skills/cdcx-advanced/: SKILL.md
plugins/cdcx-cli/skills/cdcx-autonomy-levels/: SKILL.md
plugins/cdcx-cli/skills/cdcx-check-balance/: SKILL.md
schemas/: advanced.toml  fiat.toml  history.toml  market.toml  staking.toml  trade.toml
schemas/apis/: account.toml  margin.toml  wallet.toml
schemas/configs/: config.json  tui.json
scripts/: test-migration.sh
site/: index.html
site/tapes/: cli-book.tape  cli-dryrun.tape  cli-mcp.tape  cli-paper.tape  cli-ticker.tape  tui-chart.tape  tui-compare.tape  tui-heatmap.tape  tui-market.tape  tui-neon.tape  tui-oco.tape  tui-orderbook.tape  tui-paper.tape
skills/: cdcx-auth-setup.md  cdcx-execution.md  cdcx-market-intel.md  cdcx-place-limit-order.md  recipe-emergency-flatten.md
tests/fixtures/: test-spec.yaml
(+5 files in other folders)
