[workspace]
members = ["crates/cdcx-core", "crates/cdcx-cli", "crates/cdcx-tui"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Agent-first CLI for Crypto.com Exchange API v1"
repository = "https://github.com/crypto-com/cdcx-cli"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
