[package]
name = "cdcx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[[bin]]
name = "cdcx"
path = "src/main.rs"

[dependencies]
cdcx-core = { path = "../cdcx-core" }
cdcx-tui = { path = "../cdcx-tui" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
rmcp = { version = "1.2", features = ["server", "transport-io"] }
rpassword = "7"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
dirs = "5"
