[package]
name = "cdcx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for cdcx — Crypto.com Exchange API client, auth, schema, and OpenAPI parser"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
dirs = "6"
chrono = "0.4"
regex = "1"
futures-util = "0.3"
serde_yaml = "0.9"

# ── TLS: rustls on Linux (cross-compile friendly), native-tls elsewhere ──

[target.'cfg(target_os = "linux")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
wiremock = "0.6"
